# BitchX1.3

./: BitchX.help  BitchX.ircnames  BitchX.quit  BitchX.reasons  COMPILE-PROBLEMS  COPYRIGHT  Changelog  INSTALL  IPv6-support  Makefile  Makefile.in  README-1.1  README-1.2  README.md  aclocal.m4  autogen.sh  bugs  configure  configure.in  configure.in.rej  install-sh  mkinstalldirs
bitchx-docs/: README_FIRST
bitchx-docs/1_General/: 1_General  4op  about  addforward  addidle  addlamenick  addnoflood  addshit  adduser  addword  ajoin  ajoinlist  away  awaylog  awaymsg  back  ban  banstat  bantype  banwords  bk  bki  bye  channel  chat  describe  disconnect  gone  help  ignore  invite  j  k  kb  kbi  kick  kickidle  l  lamenicklist  lastlog  (+37 more)
bitchx-docs/2_Queries/: 2_Queries  admin  flush  info  ison  links  list  lusers  map  motd  n  names  sc  scan  scanf  scani  scann  scano  scans  scanv  stats  time  trace  userhost  userip  users  version  who  whois  whowas  wi  wii  wilc  wilcr  wilm  wiln  ww
bitchx-docs/3_Operators/: 3_Operators  connect  deoper  die  dline  hash  helpop  helpserv  kill  kline  locop  oper  rehash  restart  rping  sping  squit  swallop  tkline  unkline  uping  wallops
bitchx-docs/4_Misc/: 4_Misc  abort  beep  cd  clear  digraph  encrypt  history  hostname  ircuser  mesg  mlist  mload  note  rbind  realname  summon  unclear  which
bitchx-docs/5_Programming/: 5_Programming  alias  assign  bless  break  call  comment  continue  do  dump  echo  eval  exec  fe  filedialog  fontdialog  for  foreach  hook  if  input  load  loaddll  loadtcl  local  menu  menuitem  package  parsekey  pmpaste  popupmenu  popupmsg  pretend  properties  push  queue  quote  redirect  repeat  return  (+21 more)
bitchx-docs/6_Functions/: 6_Functions  absstrlen  addtabkey  afterw  ajoinitem  aliasctl  annoy  before  bitchx  center  cexist  chanmode  channel  chmod  chngw  chop  chops  chr  close  common  connect  convert  copattern  count  cparse  crypt  curpos  currchans  decode  delarray  delitem  deuhc  eof  epic  fexist  filter  findw  fnexist  fsize  ftime  (+137 more)
bitchx-docs/7_Docs/: 7_Docs  About_BitchX  Arrays  Command_Line  Compile_Opts  Copyright  Environment  Etiquette  Expressions  Introduction  Key_Bindings  New_User  Patterns  Programming  Security  Serial_Numbers  Server_List  Server_Numerics  Signals  Special_Vars  Status_Line  Text_Highlight  Updates
bitchx-docs/8_Scripts/: 2.8script  8_Scripts  action  alias  autokick  autoop  away  basical  bigcheese  brc  channel  columns  commander  compl.mods  complete  country  cursor  deban  deutsch  disc  edit  english  environment  events  events.hop  fake-dcc  fe  files  finger  fnet  follow  functions  funnyban  genalias  global  guh  history  history-match  imap  ircprimer  (+52 more)
bx-conf/: Makefile.in  ds_cell.c  ds_cell.h  ds_keys.h  file_cpy.c  func_pr.h  load.c  save.c  test.h
contrib/: BitchX-1.0c14-IPv6-2.patch  BitchX-1.0c14-LATIN.patch  BitchX-configure.patch  bx12-sasl.diff  dcc.diff  misc.c  parse_arg  vh1.c  window.and.detach.diff
dll/: Make-windll.sh  Makefile.in  dllinit.c
dll/abot/: Makefile.in  abot.sh  autobot.c
dll/acro/: Makefile.in  README  TODO  acro.c  acro.h  acro.sh
dll/aim/: Makefile.in  README  aim.c  aim.h  bx.patch  cmd.c  toc.c  util.c
dll/amp/: Makefile.in  amp.h  audio.c  audio.h  audioIO.c  audioIO.h  audioIO_Linux.c  buffer.c  config.h.in  getbits.c  getbits.h  getdata.c  huffman.c  layer2.c  layer3.c  misc2.c  misc2.h  position.c  transform.c  util.c
dll/arcfour/: Makefile.in  README  arcfour.c  arcfour.h  asdf  md5.c  md5.h
dll/autocycle/: Makefile.in  autocycle.c
dll/blowfish/: CREDITS  Makefile.in  README  bf_tab.h  blowfish.c  blowfish.doc  blowfish.h  blowfish.sh  bot-crypt.tcl  op-crypt.tcl
dll/cavlink/: Makefile.in  cavlink.c  cavlink.sh
dll/cdrom/: Makefile.in  cdrom.c
dll/encrypt/: Makefile.in  encrypt.c  encrypt.sh
dll/europa/: CREDITS  Makefile.in  README  europa.c  europa.h  knowledgebase.sql
dll/fserv/: Makefile.in  fserv.c  fserv.sh
dll/hint/: BitchX.hints  Makefile.in  hint.c  hint.sh
dll/identd/: Makefile.in  identd.c  identd.sh
dll/nap/: Changes  Makefile.in  README.nap  md5.c  md5.h  nap.c  nap.sh  nap_file.c  napfunc.c  napother.c  napsend.c  napster.h  test  test.c  to-do
dll/nicklist/: Make.cmd  Makefile.in  nicklist.c
dll/pkga/: Makefile.in  pkga.c
dll/possum/: Makefile.in  def.h  extern.h  glob.h  head.c  head.h  llist.c  llist.h  pathnames.h  possum.c  possum.sh  rcv.h
dll/qbx/: Makefile.in  README  qbx.c  qbx.h
dll/qmail/: Makefile.in  qmail.c
dll/wavplay/: Makefile.in  wavplay.c
dll/xmms/: Makefile.in  xmms.c
doc/: BitchX.1  BitchX.bat.in  BitchX.devel  BitchX.doc  BitchX.faq  BitchX.mailinglist  BitchX.sites  BitchX.xpm  Makefile.in  README  README.GTK  README.OS2  botlink.txt  entire-faq.html  functions.txt  hooks.txt  ircII.servers  mirc-colors.txt  plugins.txt
doc/misc/: BitchX-mini.xpm  Sfbx.ans  bitch52.xpm  bitchx.asc  bitchx.xpm  lutkax.ans  (+1 more)
include/: PMbitchx.h  alias.h  alist.h  array.h  bsdglob.h  cdcc.h  cdns.h  cdrom.h  chelp.h  color.h  commands.h  config.h  cset.h  ctcp.h  dcc.h  debug.h  defs.h.in  dlfcn.h  encrypt.h  exec.h  files.h  flood.h  funny.h  gtkbitchx.h  gui.h  hash.h  hash2.h  hebrew.h  help.h  history.h  hold.h  hook.h  if.h  ignore.h  input.h  irc.h  irc_std.h  ircaux.h  ircterm.h  keys.h  (+31 more)
macros/: audiofile.m4  check_declaration.m4  check_version.m4  esd.m4  glib.m4  gnome.m4  gtk.m4  imlib.m4  mkaclocal  plugins.m4  pluginsupport.m4  shlib.m4
script/: SCRIPTS  actplug.gmz  auto_resume  bxglobal  bxtcl.tcl  dcc_fserve-0.50.tgz  example-.bitchxrc  file.tcl  fserve.irc  logger.bx  menu.bx  operchallenge-1.3.tar  query  query.bx
source/: Makefile.in  X.c  alias.c  alist.c  alloca.c  array.c  art.c  banlist.c  bot_link.c  cdcc.c  cdns.c  cdrom.c  chelp.c  commands.c  commands2.c  compat.c  cset.c  ctcp.c  dcc.c  debug.c  encrypt.c  exec.c  expr.c  expr2.c  files.c  flood.c  fset.c  functions.c  funny.c  glob.c  gtkbitchx.c  hash.c  hebrew.c  help.c  history.c  hook.c  if.c  ignore.c  input.c  irc.c  (+45 more)
(+443 files in other folders)
